kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: wildfly
  labels:
    app: wildfly
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  - port: 9990
    targetPort: 9990
    protocol: TCP
    name: management
  selector:
    app: wildfly
